--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,22 @@ services:
     command: npm start
 
   backend:
-    build: ./backend/django
+    build: ./backend/django_app
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/django:/app
+      - ./backend/django_app:/app
     working_dir: /app
     command: >
       sh -c "python manage.py runserver 8000"
 
   fastapi:
-    build: ./backend/fastapi
+    build: ./backend/fastapi_app
     ports:
       - "9000:9000"
     volumes:
-      - ./backend/fastapi:/app
-      - ./backend/django:/app/django  # Django 프로젝트 공유
+      - ./backend/fastapi_app:/app
+      - ./backend/django_app:/app/django_app  # Django 프로젝트 공유
     working_dir: /app
     command: >
       sh -c "uvicorn main:app --port 9000 --reload"
