feat: docker 환경에서 로그인 api 연동 완료 이벤트는 미완료 fastapi의 앞에 경로를 'fastapi'를 붙이면서 생긴 오류 수정 및 경로 정리하고 로컬 , 도커(개발), 운영 env 로 분리해주기 전단계

--- a/backend/django_app/.env.development
+++ b/backend/django_app/.env.development
@@ -12,7 +12,10 @@ DJANGO_LANGUAGE_CODE=ko-kr
 DJANGO_TIME_ZONE=Asia/Seoul
 
 # 호스트 (미정이었음 → 기본 복구)
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,dev.myserver.com
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+
+# 
+DJANGO_CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:9000,http://localhost:8000,http://127.0.0.1:8000,http://localhost:3001
 
 # 🗄️ DB (PostgreSQL 등 확장 가능 시나리오)
 DJANGO_DB_ENGINE=
