--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -7,4 +7,6 @@ REACT_APP_ENV=
 
 # axios 설정값
 REACT_APP_API_BASE_URL=
+REACT_APP_API_DJANGO_URL=
+REACT_APP_API_FASTAPI_URL=
 REACT_APP_AXIOS_TIMEOUT=
