--- a/backend/django_app/.env.development
+++ b/backend/django_app/.env.development
@@ -7,19 +7,16 @@ DJANGO_SETTINGS_MODULE=config.settings.dev
 # 디버그
 DJANGO_DEBUG=True
 
-# 시간/언어
-DJANGO_LANGUAGE_CODE=ko-kr
-DJANGO_TIME_ZONE=Asia/Seoul
-
 # 호스트 (미정이었음 → 기본 복구)
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
-# 
-DJANGO_CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:9000,http://localhost:8000,http://127.0.0.1:8000,http://localhost:3001
+# CORS
+DJANGO_CORS_ALLOWED_ORIGINS=http://0.0.0.0:9000,http://localhost:3000⁠,
+DJANGO_CORS_ALLOW_ALL_ORIGINS=True
 
-# 🗄️ DB (PostgreSQL 등 확장 가능 시나리오)
-DJANGO_DB_ENGINE=
-DJANGO_DB_NAME=
+# DB (PostgreSQL 등 확장 가능 시나리오)
+DJANGO_DB_ENGINE=django.db.backends.sqlite3
+DJANGO_DB_NAME=db.sqlite3
 DJANGO_DB_USER=
 DJANGO_DB_PASSWORD=
 DJANGO_DB_HOST=
