--- a/.gitignore
+++ b/.gitignore
@@ -288,6 +288,7 @@ web_modules/
 .env.local
 .env.production
 .env.common
+.env.dev
 # parcel-bundler cache (https://parceljs.org/)
 .parcel-cache
 
@@ -502,7 +503,7 @@ $RECYCLE.BIN/
 /backend/fastapi_app/.env.development
 /backend/fastapi_app/.env.production
 /backend/fastapi_app/.env.local
-/backend/fastapi_app/.env.development
+/backend/fastapi_app/.env.dev
 /backend/fastapi_app/.env.common
 
 
@@ -517,5 +518,6 @@ $RECYCLE.BIN/
 # Docker 성공시 제외함 (임시로 올리지 않기)
 # docker-compose.yml
 # **/Dockerfile
-# **/.dockerignoreb a c k e n d / f a s t a p i _ a p p / . e n v . c o m m o n  
+# **/.dockerignoreb a c k e n d / f a s t a p i _ a p p / . e n v . c o m m o n 
+ 
  
