--- a/backend/django_app/.env.development
+++ b/backend/django_app/.env.development
@@ -15,13 +15,12 @@ DJANGO_CORS_ALLOWED_ORIGINS=http://0.0.0.0:9000,http://localhost:3000,http://127
 DJANGO_CORS_ALLOW_ALL_ORIGINS=True
 
 # DB (PostgreSQL 등 확장 가능 시나리오)
+USE_SQLITE=false
+
 DJANGO_DB_ENGINE=django.db.backends.postgresql
-DJANGO_DB_NAME=purgo
+DJANGO_DB_NAME=purgo_db
 DJANGO_DB_USER=postgres
 DJANGO_DB_PASSWORD=1234
-DJANGO_DB_HOST=purgo_db
+DJANGO_DB_HOST=postgresql_db
 DJANGO_DB_PORT=5432
 
-# Docker DB
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=1234
