--- a/backend/django_app/.env.example
+++ b/backend/django_app/.env.example
@@ -20,7 +20,10 @@ DJANGO_ALLOWED_HOSTS=
 DJANGO_CORS_ALLOWED_ORIGINS=
 DJANGO_CORS_ALLOW_ALL_ORIGINS=
 
-# database\\
+# database
+# base_dir 구분
+USE_SQLITE=
+
 DJANGO_DB_ENGINE=
 DJANGO_DB_NAME=
 DJANGO_DB_USER=
