--- a/.gitignore
+++ b/.gitignore
@@ -518,6 +518,4 @@ $RECYCLE.BIN/
 # Docker 성공시 제외함 (임시로 올리지 않기)
 # docker-compose.yml
 # **/Dockerfile
-# **/.dockerignoreb a c k e n d / f a s t a p i _ a p p / . e n v . c o m m o n 
- 
- 
+# **/.dockerignore
