--- a/.gitignore
+++ b/.gitignore
@@ -518,4 +518,5 @@ $RECYCLE.BIN/
 # Docker 성공시 제외함 (임시로 올리지 않기)
 # docker-compose.yml
 # **/Dockerfile
-# **/.dockerignore
+# **/.dockerignoreb a c k e n d / f a s t a p i _ a p p / . e n v . c o m m o n  
+ 
