--- a/.gitignore
+++ b/.gitignore
@@ -499,6 +499,7 @@ $RECYCLE.BIN/
 /backend/django_app/.env.local
 /backend/django_app/.env.common
 
+# Backend -FastAPI
 /backend/fastapi_app/.env
 /backend/fastapi_app/.env.development
 /backend/fastapi_app/.env.production
@@ -518,5 +519,5 @@ $RECYCLE.BIN/
 # Docker 성공시 제외함 (임시로 올리지 않기)
 # docker-compose.yml
 # **/Dockerfile
-# **/.dockerignoreb a c k e n d / f a s t a p i _ a p p / . e n v . c o m m o n  
- 
+# **/.dockerignore
+
