--- a/backend/django_app/.env.example
+++ b/backend/django_app/.env.example
@@ -30,3 +30,10 @@ DJANGO_DB_USER=
 DJANGO_DB_PASSWORD=
 DJANGO_DB_HOST=
 DJANGO_DB_PORT=
+
+# session , cookie
+SESSION_COOKIE_SAMESITE=
+CSRF_COOKIE_SAMESITE=
+SESSION_COOKIE_SECURE=
+CSRF_COOKIE_SECURE=
+CSRF_COOKIE_HTTPONLY=
